--- a/stripe-client/src/styles/CheckoutForm.scss
+++ b/stripe-client/src/styles/CheckoutForm.scss
@@ -16,6 +16,9 @@
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.15);
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 5%;
 
   p {
     text-align: center;
@@ -34,7 +37,7 @@
     margin: 10px 0 20px 0;
     padding: 10px 14px;
     font-size: 1em;
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px,
       rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
     border: 0;
